@@ -40,6 +40,12 @@ mjb.extensions=AVI DIVX MKV WMV M2TS TS RM QT ISO VOB MPG MOV MP4 M1V M2V M4V M2
 # an additional skin named "sd" is for Standard Definition displays
 mjb.skin.dir=./skins/default
 
+# Genres file used for consolidating/renaming genres
+mjb.xmlGenreFile=genres.xml
+
+# Categories file used for enabling/renaming catgories
+mjb.xmlCategoryFile=categories.xml
+
 # Number of Days a file is considered for the NEW category
 # And number of movies to include
 # A 0 for newdays disables the new category
