@@ -5,6 +5,7 @@
 MovieJukebox 1.0.15 beta
 ------------------------
   - Enhancement  #225 Improved sorting of movies (by IMdB rating and by year)
+  - Enhancement  #250 So how do we customize the categories?
   - Enhancement  #254 Use XBMC tvshow nfo layout to override scraper info
   - Enhancement  #331 FilmUp.it scraper (Italian Plug-In)
   - Enhancement  #343 Allowing prebuf to be set
